@@ -1881,8 +1881,8 @@ Xamine_PrintSpectrum(XMWidget* w, XtPointer User,
 	sprintf(buf, "mv %s.ps %s; ", cmd_root.c_str(), sFilename.c_str());
       }
       strcat(GriCmd, buf);
-      char tbuf[25];
-      sprintf(tbuf, "rm -f %s; rm -f %s", cmd_file, cmd_root.c_str());
+      char tbuf[100];
+      snprintf(tbuf, sizeof(tbuf), "rm -f %s; rm -f %s", cmd_file, cmd_root.c_str());
       strcat(GriCmd, tbuf);
     }
     }
